Link to rendered pages

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Lua files representing features of XMPP servers and clients.
+
+Rendered pages can be found at <https://www.zash.se/xmpp-features.html>
+for servers and <https://www.zash.se/xmpp-clients.html> for clients.
